# Organizy

./: .env.example  .gitignore  CLAUDE.md  Dockerfile.frontend.prod  README.md  deploy.sh  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  eslint.config.js  index.html  nginx.conf  package.json  pnpm-lock.yaml  pyproject.toml  redeploy.sh  tsconfig.app.json
backend/: .env.example  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py  0002_add_monthly_usage.py  0003_add_organizy_tables.py  0004_add_workout_exercises.py  0005_add_workout_presets.py  0006_add_budget_tables.py  0007_add_bank_accounts.py  0008_add_todo_projects.py
backend/app/: config.py  dependencies.py  main.py
backend/app/core/: exceptions.py
backend/app/models/: __init__.py  analytics.py  bank_account.py  base.py  budget_subscription.py  budget_transaction.py  daily_task.py  daily_task_completion.py  (+8 more)
cli/: __init__.py  main.py
cli/commands/: db.py  dev.py  init.py
src/: App.vue  style.css
src/components/: SubscriptionBanner.vue  index.ts
src/composables/: useAuth.ts  useBudget.ts  useDailyTasks.ts  useDashboard.ts  usePricingModal.ts  useProjectBoard.ts  useProjects.ts  useSubscription.ts  useTodos.ts  useWorkouts.ts
src/pages/: BudgetPage.vue  DailyTasksPage.vue  DashboardPage.vue  HomePage.vue  NotFoundPage.vue  OAuthCallbackPage.vue  PresetsPage.vue  PricingPage.vue  ProjectBoardPage.vue  ProjectsPage.vue  SettingsPage.vue  TodosPage.vue  WorkoutsPage.vue
src/router/: index.ts
src/services/: api.ts
(+61 files in other folders)
